# hacker-weather

./: .gitignore  .opengrepignore  README.md  pyproject.toml
.github/workflows/: opengrep.yml  tests.yml
docs/: dev-docs.md
opengrep-rules/: python-security.yml
src/hacker_weather/: __init__.py  app.py  cli.py  image_test.py  radar.py
tests/: test_cli.py  test_image_test.py  test_radar.py
